--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -16,6 +16,9 @@ jobs:
     if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main'
     steps:
     - uses: actions/checkout@v5
+      with:
+        fetch-depth: 0  # Fetch full history for git log
+        fetch-tags: true  # Fetch tags for comparing releases
 
     - name: Calculate version (same logic as build workflow)
       id: version
